# dacho-example

./: .gitattributes  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  rust-toolchain.toml
assets/shaders/: default.wgsl
src/: main.rs
src/game/: mod.rs
src/game/components/: mod.rs  velocity.rs
src/game/player/: mod.rs  movement.rs  spawn.rs
