# dacho-example/Cargo.toml

[package]
name         = "dacho-example"
version      = "0.2.0"
rust-version = "1.81.0"
authors      = ["mochou-p"]
edition      = "2021"
description  = "Example game for dacho"
repository   = "https://github.com/mochou-p/dacho-example"
license      = "MIT OR Apache-2.0"
keywords     = ["dacho", "game", "example", "template", "3D"]
categories   = ["game-development", "games", "multimedia", "graphics", "rendering"]

[dependencies]
dacho = { path = "../dacho" }

[profile.release]
strip         = "symbols"
lto           = "fat"
panic         = "abort"
codegen-units = 1

[lints.clippy]
all      = "deny"
nursery  = "deny"
pedantic = "deny"

