# dacho-example/Cargo.toml

[package]
name         = "dacho-example"
version      = "0.2.0"

edition      = "2021"
rust-version = "1.85.0"

authors      = ["mochou-p"]
description  = "Example game for dacho"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/dacho-example"

keywords     = ["dacho", "game", "example", "template", "3D"]
categories   = ["game-development", "games", "multimedia", "graphics", "rendering"]

[dependencies]
dacho = { path = "../dacho" }

[profile.release]
strip         = "symbols"
lto           = "fat"
panic         = "abort"
codegen-units = 1

[lints.clippy]
all      = "forbid"
pedantic = "deny"
nursery  = "forbid"
cargo    = "deny"

